# McGet

./: Cargo.toml  LICENSE  README.md  TODO.md
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  lib.rs  modpack.rs  prelude.rs
curseforge/: Cargo.toml
curseforge/src/: api.rs  dependency_resolver.rs  downloader.rs  lib.rs  models.rs  objects.rs  prelude.rs  resolver.rs  resolver_meta.rs
downloader/: Cargo.toml
downloader/src/: downloader.rs  lib.rs  prelude.rs
local/: McGet.yaml
mcget-core/: Cargo.toml
mcget-core/src/: cli.rs  cli_helpers.rs  config.rs  lib.rs
mcget-core/src/api/: mod.rs  objects.rs  prelude.rs  requests.rs
src/: config.rs  fmt.rs  local_pack.rs  main.rs  pack.rs
