[package]
name = "mcget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3

[dependencies]
whoami = "1.2.1"
clap = { version = "3.0.14", features = ["derive"] }

curseforge = { path = "curseforge" }
downloader = { path = "downloader" }

serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"

colored = "2.0.0"
symlink = "0.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.16.1", features = ["full"] }

termsize = "0.1.6"
