[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"

indicatif = "0.16.2"
colored = "2.0.0"
argh = "0.1.7"
whoami = "1.2.1"
symlink = "0.1.0"

curseforge = { path = "../curseforge" }
