[package]
name = "curseforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

urlencoding = "2.1.0"
hyper-tls = "0.5.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.15.0", features = ["full"] }

indicatif = "0.16.2"
colored = "2.0.0"
async-recursion = "0.3.2"