[package]
name = "curseforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.16.1", features = ["full"] }

smallvec = "1.8.0"

lockfree = "0.5.1"
async-recursion = "1.0.0"

colored = "2.0.0"
rustc-hash = "1.1.0"
