[package]
name = "mcget-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
colored = "2.0.0"
indicatif = "0.16.2"

reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
urlencoding = "2.1.0"

tokio = { version = "1.15.0", features = ["full"] }
